# TIMEX_experiments

./: .directory  Dockerfile  README.md  create_docker_image.sh  install_darts_venv.sh  install_timex_venv.sh  launch_covid_tests.sh  launch_covid_tests_docker.sh  launch_goog_tests.sh  launch_goog_tests_docker.sh  launch_milk_tests.sh  launch_milk_tests_docker.sh  pyproject.toml
Studio-Covid19/: .directory  Covid19-italy.csv  Darts-and-Comparison-with-TIMEX.ipynb  run_darts.py  run_darts_light.py
Studio-Covid19/multivariate/delta_1/: .directory  app_load_from_dump.py  historical_predictions.pkl
Studio-Covid19/univariate/: .directory
Studio-Covid19/univariate/delta_1/: .directory  historical_predictions.pkl
Studio-Covid19/univariate/delta_7/: app.py  app_load_from_dump.py
Studio-GOOG/: .directory  Darts-and-Comparison-with-TIMEX.ipynb  Stocks.csv  run_darts.py  run_darts_light.py
Studio-GOOG/univariate/delta_1/: .directory  app.py  app_load_from_dump.py  historical_predictions.pkl
Studio-GOOG/univariate/delta_3/: historical_predictions.pkl
Studio-Monthly-Milk-Production/: .directory  Darts-and-Comparison-with-TIMEX.ipynb  run_darts.py  run_darts_light.py
Studio-Monthly-Milk-Production/univariate/delta_1/: .directory  app_load_from_dump.py  historical_predictions.pkl
Studio-Monthly-Milk-Production/univariate/delta_3/: historical_predictions.pkl
Studio-Monthly-Milk-Production/univariate/delta_6/: app.py  historical_predictions.pkl
timexseries/data_prediction/: pipeline.py
timexseries/data_prediction/models/: arima_predictor.py  darts.py  predictor.py
(+13 files in other folders)
